updated DO reminder generation

--- a/app/views/notifier/do_shift_pending_email.html.erb
+++ b/app/views/notifier/do_shift_pending_email.html.erb
@@ -1,7 +1,9 @@
 <p><p/>
-<b>REMINDER:</b> Your BAMRU DO Shift starts Tuesday at 8:00am.
+<b>REMINDER:</b> Your BAMRU DO shift starts Tuesday at 8:00am.
 <p><p/>
 Please review the DO guides and be prepared for your shift!
+<p><p/>
+<hr>
 <p><p/>
 <b>BAMRU DO Schedule:</b><br/>
 http://bamru.net/do_assignments
