--- a/app/views/notifier/do_shift_pending_email.text.erb
+++ b/app/views/notifier/do_shift_pending_email.text.erb
@@ -1,7 +1,9 @@
 
-REMINDER: Your BAMRU DO Shift starts Tuesday at 8:00am.
+REMINDER: Your BAMRU DO shift starts Tuesday at 8:00am.
 
 Please review the DO guides and be prepared for your shift!
+
+-----------------------------------------
 
 BAMRU DO Schedule:
 http://bamru.net/do_assignments
