--- a/app/views/notifier/do_shift_starting_email.html.erb
+++ b/app/views/notifier/do_shift_starting_email.html.erb
@@ -1,7 +1,9 @@
 <p><p/>
-<b>ATTENTION:</b> Your BAMRU DO shift has started!!
+<b>ATTENTION:</b> Your BAMRU DO shift is starting!!
 <p><p/>
-<b>Next Steps:</b><br/>
+Your DO shift starts <b>Tuesday 8am</b>.
+<p><p/>
+<b>TODO - Tuesday 8am:</b><br/>
 1) Update the Status Line<br/>
 2) Send a page to the Unit with your Contact Info
 <p><p/>
