--- a/app/views/notifier/do_shift_starting_email.text.erb
+++ b/app/views/notifier/do_shift_starting_email.text.erb
@@ -1,7 +1,9 @@
 
-ATTENTION: Your BAMRU DO shift has started!!
+ATTENTION: Your BAMRU DO shift is starting!!
 
-Next Steps:
+Your DO shift starts Tuesday 8am.
+
+TODO - Tuesday 8am:
 1) Update the Status Line
 2) Send a page to the Unit with your Contact Info
 
