updated mobile3 login message

--- a/app/views/mobile3/index.html.erb
+++ b/app/views/mobile3/index.html.erb
@@ -45,7 +45,7 @@
       <a class='nav' href="#profile">My Profile</a>
       <div class=footer>
         <div id=state></div>
-        <div id=update>Updated <%= Time.now.strftime("%b-%d %H:%M:%S") %></div>
+        <div id=update>updated <%= Time.now.strftime("%b-%d %H:%M:%S") %></div>
       </div>
     </div>
 
