added photo icons to mobile3

--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -129,6 +129,10 @@ header {
   -webkit#{$position}-border-radius: 15px;
 }
 
+.photo_icon {
+  margin-right: 10px;
+}
+
 .nav {
   @include nav-base-style;
   @include nav-nowrap;
