--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -123,6 +123,7 @@ header {
   white-space: nowrap;
 }
 
+
 @mixin radius($position: "") {
   border#{$position}-radius: 15px;
   -moz#{$position}-border-radius: 15px;
@@ -182,7 +183,7 @@ header {
 
 .divider {
   padding: 5px;
-  margin-top: 20px;
+  margin-top: 10px;
   display: block;
   background: black;
   color: white;
@@ -191,7 +192,8 @@ header {
 /* ----- utility styles ----- */
 
 .data {
-  padding: 10px;
+  padding-left: 10px;
+  margin-top: 10px;
 }
 
 .center {
