--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -41,8 +41,9 @@ You can also test on your desktop, using a new version of Chrome or Firefox.
 </table>
 
 <p></p>
-<h3 width=100% style='background: grey; padding: 3px; color: white;'>Chat</h3>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Messaging</h3>
 Experiments with chat and real-time message feeds.
 <p></p>
 <b><%= link_to "Chat1", '/chat1'  %></b> - simple chat client<br/>
-<b><%= link_to "Chat2", '/chat2'  %></b> - chat client using client-side mvc
+<b><%= link_to "Chat2", '/chat2'  %></b> - chat client using client-side mvc<br/>
+<b><%= link_to "Monitor", '/monitor'  %></b> - streaming performance stats and events
