--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -12,9 +12,13 @@
     </table>
   </div>
   <div id=x_single_col class=centered>
-    <%= @quarter[:year] %> / Q<%= @quarter[:quarter] %> <p/>
-
-    <%= link_prev(@quarter) %> <%= link_current_quarter %> <%= link_next(@quarter) %><p/>
+    <table width=100%>
+      <tr>
+        <td width=40% align=right>Showing <%= @quarter[:year] %> / Q<%= @quarter[:quarter] %></td>
+        <td width=20%</td>
+        <td width=40% align=left><%= link_prev(@quarter) %> <%= link_current_quarter %> <%= link_next(@quarter) %></td>
+      </tr>
+    </table>
 
     <table border=1 align=center>
       <thead>
