--- a/app/views/mobile3/index.html.erb
+++ b/app/views/mobile3/index.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html manifest="/mobile3f.manifest">
-<!--<html>-->
+<!--<html manifest="/mobile3f.manifest">-->
+<html>
 <head>
   <title>BAMRU Mobile</title>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
@@ -14,10 +14,10 @@
     <script src="/assets/mobile3/iscroll.js"></script>
   <% end %>
   <script>
-    window.members   = new M3_Members(<%= raw @mem_json %>)
-    window.messages  = new M3_Messages(<%= raw @msg_json %>)
-    window.inbox     = new M3_Distributions(<%= raw @dst_json %>)
-    window.myID   = returnSelf(<%= current_member.id %>)
+    window.members       = new M3_Members(<%= raw @mem_json %>);
+    window.messages      = new M3_Messages(<%= raw @msg_json %>);
+    window.distributions = new M3_Distributions(<%= raw @dst_json %>);
+    window.myID      = "<%= current_member.id %>";
   </script>
 </head>
 
@@ -42,7 +42,7 @@
       <a class='nav' href="#status"  >Status Line</a>
       <!--<a class='nav' href="#send"    >Send Page</a>-->
       <a class='nav' href="#messages">Unit Message Log</a>
-      <a class='nav' href="#inbox"><%= @inbox_label %></a>
+      <a class='nav' id="myinbox" href="#inbox"><%= @inbox_label %></a>
       <a class='nav' href="#profile">My Profile</a>
       <div class=footer>
         <div id=state></div>
