--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -89,16 +89,6 @@ header {
   text-align: right;
 }
 
-/* ----- page-nav styling ----- */
-.page_nav {
-  width: 100%;
-  margin-bottom: 20px;
-}
-.page_nav li {
-  display: inline;
-  padding-right: 20px;
-}
-
 /* ----- content styling ----- */
 
 .page {
@@ -161,6 +151,31 @@ header {
   width: 100%;
 }
 
+.l_header_nav {
+  @include nav-base-style;
+
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  text-align: center;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+}
+
+.r_header_nav {
+  @include nav-base-style;
+  border: 1px solid black;
+  text-align: center;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+}
+
+.selected {
+  background: lightblue;
+}
+
 .lnav {
   @include nav-base-style;
   @include nav-nowrap;
@@ -197,6 +212,24 @@ header {
   display: block;
   background: black;
   color: white;
+}
+
+/* ----- checkboxes ----- */
+
+label {
+  display: block;
+  background: white;
+  border: 1px solid black;
+  padding: 10px;
+  margin-bottom: 1px;
+}
+
+textarea {
+  width: 100%;
+}
+
+.textarea_wrapper {
+
 }
 
 /* ----- utility styles ----- */
