--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -225,7 +225,8 @@ header {
   -moz-box-orient: horizontal;
   display: box;
   box-orient: horizontal;
-  margin-bottom: 15px;
+  padding-bottom: 25px;
+  padding-top: 10px;
 }
 
 #select_buttons {
