planner update actions

--- a/app/views/do_assignments/edit.html.erb
+++ b/app/views/do_assignments/edit.html.erb
@@ -58,7 +58,7 @@
 
     </div>
     <div id=x_footer>
-      <%= link_to "Planner", do_planner_path(@quarter) %>
+      <%= link_to "Plan", do_planner_path(@quarter) %>
     </div>
   </div>
 </div>
