--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -44,6 +44,6 @@
     <p></p>
   </div>
   <div id=x_footer style='font-size: 10pt;'>
-      <%= link_to "Edit", edit_do_assignment_path(1, @quarter) %>
+      <%= link_to "Edit", edit_do_assignment_path(1, @quarter) %> | <%= link_to "Plan", do_planner_path(@quarter) %>
   </div>
 </div>
