--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -29,8 +29,8 @@
             <thead>
             <tr>
               <th>Role</th>
-              <th align=center><img src="/images/page.gif" border=0></th>
-              <th align=center><img src="/images/mail.gif" border=0></th>
+              <th align=center><img id='pager_icon' src="/images/page.gif" border=0></th>
+              <th align=center><img id='email_icon' src="/images/mail.gif" border=0></th>
               <th>Name</th>
             </tr>
             </thead>
