--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -40,7 +40,7 @@
                 <td><%= m.full_roles %></td>
                 <%= raw phone_checkbox(m) %>
                 <%= raw email_checkbox(m) %>
-                <td><a href="/members/<%= m.id %>"><%= m.full_name %><%= roster_oot_label(m) %></a></td>
+                <td><a href="/members/<%= m.id %>"><%= m.full_name %></a> <%= raw roster_oot_label(m) %></td>
               </tr>
             <% end %>
             </tbody>
